--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3595,8 +3595,8 @@ input, select, textarea {
 			left: 50%;
 			transform: translateX(-50%);
 			letter-spacing: 0.225em;
-/*			margin-left: -8.5em;
-*/			opacity: 1;
+/*			margin-left: -8.5em;*/
+			opacity: 1;
 			outline: 0;
 			padding-left: 0.225em;
 			position: absolute;
