--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3926,6 +3926,7 @@ input, select, textarea {
 		background-position: center center;
 		background-repeat: no-repeat;
 		background-size: cover;
+        background-attachment: scroll;
 	}
 
 	body.is-mobile.landing #banner,
