--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2796,7 +2796,7 @@ input, select, textarea {
 		}
 
 		.wrapper.style1 {
-			background-color: #4286f4;
+			background-color: rgb(41,48,55)/*#4286f4*/;
 			color: #c8ece9;
 		}
 
@@ -2826,10 +2826,12 @@ input, select, textarea {
 
 			.wrapper.style1 header.major h2, .wrapper.style1 header.major h3, .wrapper.style1 header.major h4, .wrapper.style1 header.major h5, .wrapper.style1 header.major h6 {
 				border-color: rgba(0, 0, 0, 0.125);
+				border-color: rgb(130,130,130);
 			}
 
 			.wrapper.style1 header.major p {
 				color: #c8ece9;
+				color: white;
 			}
 
 			.wrapper.style1 label {
@@ -2973,6 +2975,7 @@ input, select, textarea {
 
 			.wrapper.style3 hr {
 				border-color: rgba(0, 0, 0, 0.125);
+				border-color: rgb(130,130,130);
 			}
 
 			.wrapper.style3 blockquote {
@@ -2989,6 +2992,7 @@ input, select, textarea {
 
 			.wrapper.style3 header.major h2, .wrapper.style3 header.major h3, .wrapper.style3 header.major h4, .wrapper.style3 header.major h5, .wrapper.style3 header.major h6 {
 				border-color: rgba(0, 0, 0, 0.125);
+				border-color: rgb(130,130,130);
 			}
 
 			.wrapper.style3 header.major p {
